@@ -1,3 +1,10 @@
+2006-02-11 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
+	* Change version number to 2.0.0 so that we can refer to it easily in the manual.
+	* Change state to Stable.
+	* Add conflicts with sr_direct_mail_ext, it_dmail_fix
+	* Modify function makeCategories.
+	* Add inserts and updates to categories conversion (still problem with category 0!).
+
 2006-02-10 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
 	* Correction to returnmail.phpsh
 	* Restructure class.readmail.php
